--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,23 @@
     
     }
 
+html {
+        /* border-box box model allows us to add padding and border to our elements without increasing their size */
+        box-sizing: border-box;
+        /* A system font stack so things load nice and quick! */
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+          Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        font-weight: 900;
+        font-size: 10px;
+        color: var(--black);
+        text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
+      }
+
+      *,
+      *:before,
+      *:after {
+        box-sizing: inherit;
+      }
 
 body {
     background-image: url("images/Diamond-Sunset.svg"),
@@ -31,3 +48,23 @@ h6 {
   margin: 0 0 5px 0;
 }
   
+.container{
+    display: grid;
+    border: 2px solid black;
+     
+}
+
+.album{
+   
+    border: 2px solid red;
+}
+
+.album_img{
+    width: 150px;
+    /* height: 200px; */
+    border: 2px solid black;
+}
+
+.album_img img{
+    width: 100%;
+}
